k8s-task-2/dotnet-env/DotNetEnvApp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-env-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-env-app
  template:
    metadata:
      labels:
        app: dotnet-env-app
    spec:
      containers:
        - name: dotnet-env-app
          image: mythreyeegp/dotnetapp:v2   # your Docker Hub image
          ports:
            - containerPort: 80
          # envFrom:
          #   - configMapRef:
          #       name: dotnet-env-config
