k8s-task-2/dotnet-env/DotNetEnvApp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-env-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dotnet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotnet-env-service   # must match your service name
            port:
              number: 80               # must match service port
